<resources>
    <string name="app_name">Dev Social</string>
    <string name="preference_file_key">com.example.com.devsocial.PREFERENCE_FILE_KEY</string>
    <string name="jwt_key">jwt</string>
    <string name="text_login">Login</string>
    <string name="text_signup">Signup</string>
    <string name="name_label">First and Last Name</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="password2_label">Confirm Password</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="text_dont_have_an_account">Don\'t have an account?</string>
    <string name="signup_underline"><u>Signup</u></string>
    <string name="text_posts">Posts</string>
    <string name="text_create">Create</string>
    <string name="text_me">Me</string>
    <string name="id_key">id</string>
    <string name="name_key">name</string>
    <string name="exp_key">exp</string>
    <string name="text_create_post">Create post</string>
    <string name="posts_empty_view">No posts have been created</string>
    <string name="text_submit">Submit</string>
    <string name="text_label">Enter text</string>
    <string name="text_your_posts">Your Posts</string>
    <string name="title_activity_user_posts">UserPostsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="text_logout">Logout</string>
    <string name="text_cancel">Cancel</string>
    <string name="delete_account_confirmation">Account deleted</string>
    <string name="text_users">Users</string>
    <string name="profiles_empty_view">There are no profiles</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="text_bio">Bio</string>
    <string name="text_skills">Skills</string>
    <string name="text_location">Location</string>
    <string name="text_website">Website</string>
    <string name="text_github">Github</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="username_label">Username</string>
    <string name="text_post_created_success">Post created</string>
    <string name="profile_created_success">Profile updated</string>
</resources>